Added Abhinav's drafts and data.

--- a/bibfile.bib
+++ b/bibfile.bib
@@ -879,6 +879,20 @@ Transition in Titanium},
   year = 	 2018
 }
 
+@Unpublished{Jain2018a,
+  author = 	 {Abhinav C. P. Jain and Patrick A. Burr and Dallas R. Trinkle},
+  title = 	 {First principles calculations of solute transport in {Zirconium I}: Vacancy-mediated diffusion with metastable states},
+  note = 	 {(under review, Acta Mater.)},
+  year = 	 2018
+}
+
+@Unpublished{Jain2018b,
+  author = 	 {Abhinav C. P. Jain and Patrick A. Burr and Dallas R. Trinkle},
+  title = 	 {First principles calculations of solute transport in {Zirconium II}: Interstitial diffusion},
+  note = 	 {(under review, Acta Mater.)},
+  year = 	 2018
+}
+
 ==== Software ====
 
 @Misc{OnsagerCalc,
@@ -966,6 +980,14 @@ Transition in Titanium},
   year = 	 2017,
   month = {23 August},
   url = 	 {dx.doi.org/10.18126/M20G83}
+}
+
+@Misc{Jain2018Data,
+  author = 	 {Abhinav C. P. Jain and Patrick A. Burr and Dallas R. Trinkle},
+  title = 	 {Data Citation: Vacancy Mediated and Interstitial Solute Transport in {Zr} from Density Functional Theory Calculations},
+  year = 	 2018,
+  month = {18 April},
+  url = 	 {dx.doi.org/10.18126/M2R04K}
 }
 
 @Misc{MagnesiumDatabase,
