Added diffusional entries.

--- a/bibfile.bib
+++ b/bibfile.bib
@@ -6807,3 +6807,154 @@ doi = {10.1063/1.4801869}
   doi = {10.1016/j.jmps.2017.01.011}
 }
 
+@Book{Mehrer2007,
+  author = 	 {Helmut Mehrer},
+  title = 	 {Diffusion in Solids: Fundamentals, Methods, Materials, Diffusion-Controlled Processes},
+  publisher = 	 {Springer-Verlag Berlin Heidelberg},
+  year = 	 2007,
+  series = 	 {Springer Series in Solid-State Sciences},
+  doi = 	 {10.1007/978-3-540-71488-0}
+}
+
+@article {Onsager1945,
+author = {Lars Onsager},
+title = {Theories and Problems of Liquid Diffusion},
+journal = {Ann. NY Acad. Sci.},
+volume = 46,
+number = 5,
+publisher = {Blackwell Publishing Ltd},
+issn = {1749-6632},
+url = {http://dx.doi.org/10.1111/j.1749-6632.1945.tb36170.x},
+doi = {10.1111/j.1749-6632.1945.tb36170.x},
+pages = {241-265},
+year = 1945,
+}
+journal = {Annals of the New York Academy of Sciences},
+
+@article{Fischer2014,
+author = {F. D. Fischer and J. Svoboda and H. Petryk},
+title = {Thermodynamic extremal principles for irreversible processes in materials science},
+journal = ActaMat,
+volume = 67,
+pages = {1-20},
+year = 2014,
+doi = {10.1016/j.actamat.2013.11.050}
+}
+
+@article{Onsager1931,
+  title = {Reciprocal Relations in Irreversible Processes. I.},
+  author = {Lars Onsager},
+  journal = {Phys. Rev.},
+  volume = 37,
+  issue = 4,
+  pages = {405-426},
+  numpages = 0,
+  year = 1931,
+  month = {Feb},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRev.37.405},
+  url = {https://link.aps.org/doi/10.1103/PhysRev.37.405}
+}
+
+@article{Allnatt1987,
+  author={A. R. Allnatt and A. B. Lidiard},
+  title={Statistical theories of atomic transport in crystalline solids},
+  journal={Rep. Prog. Phys.},
+  volume=50,
+  number=4,
+  pages=373,
+  doi={10.1088/0034-4885/50/4/001},
+  year=1987,
+}
+  url={http://stacks.iop.org/0034-4885/50/i=4/a=001},
+
+@article{Allnatt2016,
+author = {A. R. Allnatt and T. R. Paul and I. V. Belova and G. E. Murch},
+title = {A high accuracy diffusion kinetics formalism for random multicomponent alloys: application to high entropy alloys},
+journal = PhilMag,
+volume = {96},
+number = {28},
+pages = {2969-2985},
+year  = {2016},
+publisher = {Taylor & Francis},
+doi = {10.1080/14786435.2016.1219785}
+}
+
+@article {Einstein1905,
+author = {Albert Einstein},
+title = {{\"U}ber die von der molekularkinetischen {Theorie} der {W\"arme} geforderte {Bewegung} von in ruhenden {Fl\"ussigkeiten} suspendierten {Teilchen}},
+journal = {Ann. d. Physik},
+volume = 322,
+number = 8,
+publisher = {WILEY-VCH Verlag},
+issn = {1521-3889},
+url = {http://dx.doi.org/10.1002/andp.19053220806},
+doi = {10.1002/andp.19053220806},
+pages = {549--560},
+year = 1905,
+}
+
+@MISC{BeOlSc2011,
+      author = "W. N. Bell and L. N. Olson and J. B. Schroder",
+      title = "{PyAMG}: Algebraic Multigrid Solvers in {Python} v3.0",
+      year = "2015",
+      url = "https://github.com/pyamg/pyamg",
+      note = "Release 3.2"
+}
+
+@Article{ZaluskaKotur2014,
+  author = 	 {Magdalena A. Za{\-l}uska-Kotur},
+  title = 	 {Variational approach to the diffusion on inhomogeneous lattices},
+  journal = 	 {Appl. Surf. Sci.},
+  year = 	 2014,
+  volume = 	 304,
+  pages = 	 {122-126},
+  doi = 	 {10.1016/j.apsusc.2013.12.133}
+}
+
+@Article{Masi1989,
+  author = 	 {A. De Masi and P. A. Ferrari and S. Goldstein and W. D. Wick},
+  title = 	 {An Invariance Principle for Reversible {Markov} Processes. Applications to Random Motions in Random Environments},
+  journal = 	 {J. Stat. Phys.},
+  year = 	 1989,
+  volume = 	 55,
+  pages = 	 {787-855}
+}
+
+@Book{Spohn1991,
+  author = 	 {Herbert Spohn},
+  title = 	 {Large Scale Dynamics of Interacting Particles},
+  publisher = 	 {Springer-Verlag Berlin Heidelberg},
+  year = 	 1991}
+
+@Article{Gortel2004,
+  author = 	 {Zbigniew W. Gortel and Magdalena A. Za{\-l}uska-Kotur},
+  title = 	 {Chemical diffusion in an interacting lattice gas: Analytic theory and simple applications},
+  journal = 	 PRB,
+  year = 	 2004,
+  volume = 	 70,
+  pages = 	 125431,
+  doi = 	 {10.1103/PhysRevB.70.125431}
+}
+
+@Article{ZaluskaKotur2007,
+  author = 	 {Magdalena A. Za{\-l}uska-Kotur and Zbigniew W. Gortel},
+  title = 	 {Ritz variational principle for collective diffusion in an adsorbate
+on a non-homogeneous substrate},
+  journal = 	 PRB,
+  year = 	 2007,
+  volume = 	 76,
+  pages = 	 245401,
+  doi = 	 {10.1103/PhysRevB.76.245401}
+}
+
+@Article{Arita2017,
+  author = 	 {Chikashi Arita and P. L. Krapivsky and Kirone Mallick},
+  title = 	 {Variational calculation of transport coefficients in diffusive lattice gases},
+  journal = 	 PRE,
+  year = 	 2017,
+  volume = 	 95,
+  pages = 	 032121,
+  doi = 	 {10.1103/PhysRevE.95.032121}
+}
+
