--- a/bibfile.bib
+++ b/bibfile.bib
@@ -6902,16 +6902,6 @@ year = 1905,
       note = "Release 3.2"
 }
 
-@Article{ZaluskaKotur2014,
-  author = 	 {Magdalena A. Za{\-l}uska-Kotur},
-  title = 	 {Variational approach to the diffusion on inhomogeneous lattices},
-  journal = 	 {Appl. Surf. Sci.},
-  year = 	 2014,
-  volume = 	 304,
-  pages = 	 {122-126},
-  doi = 	 {10.1016/j.apsusc.2013.12.133}
-}
-
 @Article{Masi1989,
   author = 	 {A. De Masi and P. A. Ferrari and S. Goldstein and W. D. Wick},
   title = 	 {An Invariance Principle for Reversible {Markov} Processes. Applications to Random Motions in Random Environments},
@@ -6928,7 +6918,7 @@ year = 1905,
   year = 	 1991}
 
 @Article{Gortel2004,
-  author = 	 {Zbigniew W. Gortel and Magdalena A. Za{\-l}uska-Kotur},
+  author = 	 {Zbigniew W. Gortel and Magdalena A. Za{\l}uska-Kotur},
   title = 	 {Chemical diffusion in an interacting lattice gas: Analytic theory and simple applications},
   journal = 	 PRB,
   year = 	 2004,
@@ -6938,7 +6928,7 @@ year = 1905,
 }
 
 @Article{ZaluskaKotur2007,
-  author = 	 {Magdalena A. Za{\-l}uska-Kotur and Zbigniew W. Gortel},
+  author = 	 {Magdalena A. Za{\l}uska-Kotur and Zbigniew W. Gortel},
   title = 	 {Ritz variational principle for collective diffusion in an adsorbate
 on a non-homogeneous substrate},
   journal = 	 PRB,
@@ -6946,6 +6936,16 @@ on a non-homogeneous substrate},
   volume = 	 76,
   pages = 	 245401,
   doi = 	 {10.1103/PhysRevB.76.245401}
+}
+
+@Article{ZaluskaKotur2014,
+  author = 	 {Magdalena A. Za{\l}uska-Kotur},
+  title = 	 {Variational approach to the diffusion on inhomogeneous lattices},
+  journal = 	 {Appl. Surf. Sci.},
+  year = 	 2014,
+  volume = 	 304,
+  pages = 	 {122-126},
+  doi = 	 {10.1016/j.apsusc.2013.12.133}
 }
 
 @Article{Arita2017,
