Updates on published and submitted papers.

--- a/bibfile.bib
+++ b/bibfile.bib
@@ -863,21 +863,41 @@ Transition in Titanium},
   data = 	 {dx.doi.org/10.18126/M20G83}
 }
 
-==== Submitted papers ====
+@Article{Hooshmand2018,
+  author = 	 {M. S. Hooshmand and C. Niu and D. R. Trinkle and M. Ghazisaeidi},
+  title = 	 {First-principles prediction of oxygen diffusivity near the {$(10\bar 12)$} twin boundary in titanium},
+  journal = 	 ActaMat,
+  year = 	 2018,
+  volume = 	 156,
+  pages = 	 {11-19},
+  doi = 	 {10.1016/j.actamat.2018.05.076}
+}
 
-@Unpublished{Fellinger2018,
+@article{Schuler2018,
+  title = {Modeling the long-term evolution of dilute solid solutions in the presence of vacancy fluxes},
+  author = {Thomas Schuler and Pascal Bellon and Dallas R. Trinkle and Robert S. Averback},
+  journal = PRM,
+  volume = 2,
+  issue = 7,
+  pages = 073605,
+  numpages = 14,
+  year = 2018,
+  month = {Jul},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevMaterials.2.073605}
+}
+
+@Article{Fellinger2018,
   author = 	 {Michael R. Fellinger and Louis G. {Hector, Jr.} and Dallas R. Trinkle},
   title = 	 {Effect of solutes on the lattice parameters and elastic stiffness coefficients of body-centered tetragonal {Fe}},
-  note = 	 {(under review, Comp. Mater. Sci.)},
-  year = 	 2018
+  journal = 	 {Comp. Mater. Sci.},
+  year = 	 2018,
+  volume = 	 152,
+  pages = 	 {308-323},
+  doi = 	 {10.1016/j.commatsci.2018.05.021}
 }
 
-@Unpublished{Schuler2018,
-  author = 	 {Thomas Schuler and Pascal Bellon and Dallas R. Trinkle and Robert S. Averback},
-  title = 	 {Modeling the long-term evolution of dilute solid solutions in the presence of vacancy fluxes},
-  note = 	 {(under review, Phys. Rev. B)},
-  year = 	 2018
-}
+==== Submitted papers ====
 
 @Unpublished{Jain2018a,
   author = 	 {Abhinav C. P. Jain and Patrick A. Burr and Dallas R. Trinkle},
@@ -890,6 +910,21 @@ Transition in Titanium},
   author = 	 {Abhinav C. P. Jain and Patrick A. Burr and Dallas R. Trinkle},
   title = 	 {First principles calculations of solute transport in {Zirconium II}: Interstitial diffusion},
   note = 	 {(under review, Acta Mater.)},
+  year = 	 2018
+}
+
+@Unpublished{Tan2018,
+  author = 	 {Anne Marie Z. Tan and Christopher Woodward and Dallas R. Trinkle},
+  title = 	 {Dislocation core structures in {Ni}-based superalloys computed using density functional theory-based flexible boundary condition approach},
+  note = 	 {(under review, Phys. Rev. Lett.},
+  year = 	 2018
+}
+
+@Unpublished{TrinkleVariational2018,
+  author = 	 {Dallas R. Trinkle},
+  title = 	 {A variational principle for mass transport},
+  note = 	 {(under review, Phys. Rev. Lett.)},
+  eprint =	 {1805.11618},
   year = 	 2018
 }
 
