Added submitted paper.

--- a/bibfile.bib
+++ b/bibfile.bib
@@ -916,7 +916,7 @@ Transition in Titanium},
 @Unpublished{Tan2018,
   author = 	 {Anne Marie Z. Tan and Christopher Woodward and Dallas R. Trinkle},
   title = 	 {Dislocation core structures in {Ni}-based superalloys computed using density functional theory-based flexible boundary condition approach},
-  note = 	 {(under review, Phys. Rev. Lett.},
+  note = 	 {(under review, Phys. Rev. Lett.)},
   year = 	 2018
 }
 
@@ -925,6 +925,15 @@ Transition in Titanium},
   title = 	 {A variational principle for mass transport},
   note = 	 {(under review, Phys. Rev. Lett.)},
   eprint =	 {1805.11618},
+  year = 	 2018
+}
+
+@Unpublished{Fellinger2018b,
+  author = 	 {Michael R. Fellinger and Anne Marie Z. Tan and Louis G. {Hector Jr.} and Dallas R. Trinkle},
+  title = 	 {Geometries of edge and mixed dislocations in bcc {Fe} from first
+ principles calculations},
+  note = 	 {(under review, Phys. Rev. Mater.)},
+  eprint =	 {1808.09512},
   year = 	 2018
 }
 
