--- a/bibfile.bib
+++ b/bibfile.bib
@@ -902,21 +902,21 @@ Transition in Titanium},
 @Unpublished{Jain2018a,
   author = 	 {Abhinav C. P. Jain and Patrick A. Burr and Dallas R. Trinkle},
   title = 	 {First principles calculations of solute transport in {Zirconium I}: Vacancy-mediated diffusion with metastable states},
-  note = 	 {(under review, Acta Mater.)},
+  note = 	 {(under review, Phys. Rev. Mater.)},
   year = 	 2018
 }
 
 @Unpublished{Jain2018b,
   author = 	 {Abhinav C. P. Jain and Patrick A. Burr and Dallas R. Trinkle},
   title = 	 {First principles calculations of solute transport in {Zirconium II}: Interstitial diffusion},
-  note = 	 {(under review, Acta Mater.)},
+  note = 	 {(under review, Phys. Rev. Mater.)},
   year = 	 2018
 }
 
 @Unpublished{Tan2018,
   author = 	 {Anne Marie Z. Tan and Christopher Woodward and Dallas R. Trinkle},
   title = 	 {Dislocation core structures in {Ni}-based superalloys computed using density functional theory-based flexible boundary condition approach},
-  note = 	 {(under review, Phys. Rev. Lett.)},
+  note = 	 {(under review, Phys. Rev. Mater.)},
   year = 	 2018
 }
 
@@ -6548,7 +6548,7 @@ doi = {10.1080/01418618908220335}
 @Article{Vaks2014,
 author = {V. G. Vaks and A. Yu. Stroev and I. R. Pankratov and A. D. Zabolotskiy},
 title = {Statistical theory of diffusion in concentrated alloys},
-journal = {J. Exper. Theo. Phys.},
+journal = {J. Exp. Theo. Phys.},
 year = 2014,
 volume = 119,
 number = 2,
@@ -6559,13 +6559,14 @@ doi = {10.1134/S1063776114070103}
 @Article{Vaks2016,
   author = 	 {V. G. Vaks and K. Yu. Khromov and I. R. Pankratov and V. V. Popov},
   title = 	 {Statistical theory of diffusion in concentrated {BCC} and {FCC} alloys and concentration dependences of diffusion coefficients in {BCC} alloys {FeCu}, {FeMn}, {FeNi}, and {FeCr}},
-  journal = 	 {J. Exper. Theo. Phys.},
+  journal = 	 {J. Exp. Theo. Phys.},
   year = 	 2016,
-  volume = 	 150,
-  pages =      {69-96},
-  doi = 	 {10.7868/S0044451016070087}
+  volume = 	 123,
+  pages =      {59-85},
+  doi = 	 {10.1134/S1063776116070244}
 }
 volume 123 no. 1 ?? springer translation? http://www.springer.com/physics/elementary/journal/11447
+Russian version DOI does not work.
 
 @article{Ghate1964,
   title = {Screened Interaction Model for Impurity Diffusion in {Zinc}},
