Updates to published papers.

--- a/bibfile.bib
+++ b/bibfile.bib
@@ -897,6 +897,29 @@ Transition in Titanium},
   doi = 	 {10.1016/j.commatsci.2018.05.021}
 }
 
+@Article{TrinkleVariational2018,
+  author = 	 {Dallas R. Trinkle},
+  title = 	 {A variational principle for mass transport},
+  journal = 	 PRL,
+  year = 	 2018,
+  volume = 	 121,
+  pages = 	 235901,
+  doi = 	 {10.1103/PhysRevLett.121.235901}
+}
+  eprint =	 {1805.11618},
+
+@Article{Fellinger2018b,
+  author = 	 {Michael R. Fellinger and Anne Marie Z. Tan and Louis G. {Hector Jr.} and Dallas R. Trinkle},
+  title = 	 {Geometries of edge and mixed dislocations in bcc {Fe} from first
+ principles calculations},
+  journal = 	 PRM,
+  year = 	 2018,
+  volume = 	 2,
+  pages = 	 113605,
+  doi = 	 {10.1103/PhysRevMaterials.2.113605}
+}
+  eprint =	 {1808.09512},
+
 ==== Submitted papers ====
 
 @Unpublished{Jain2018a,
@@ -917,23 +940,6 @@ Transition in Titanium},
   author = 	 {Anne Marie Z. Tan and Christopher Woodward and Dallas R. Trinkle},
   title = 	 {Dislocation core structures in {Ni}-based superalloys computed using density functional theory-based flexible boundary condition approach},
   note = 	 {(under review, Phys. Rev. Mater.)},
-  year = 	 2018
-}
-
-@Unpublished{TrinkleVariational2018,
-  author = 	 {Dallas R. Trinkle},
-  title = 	 {A variational principle for mass transport},
-  note = 	 {(under review, Phys. Rev. Lett.)},
-  eprint =	 {1805.11618},
-  year = 	 2018
-}
-
-@Unpublished{Fellinger2018b,
-  author = 	 {Michael R. Fellinger and Anne Marie Z. Tan and Louis G. {Hector Jr.} and Dallas R. Trinkle},
-  title = 	 {Geometries of edge and mixed dislocations in bcc {Fe} from first
- principles calculations},
-  note = 	 {(under review, Phys. Rev. Mater.)},
-  eprint =	 {1808.09512},
   year = 	 2018
 }
 
