--- a/bibfile.bib
+++ b/bibfile.bib
@@ -899,7 +899,7 @@ Transition in Titanium},
 
 @Article{TrinkleVariational2018,
   author = 	 {Dallas R. Trinkle},
-  title = 	 {A variational principle for mass transport},
+  title = 	 {Variational principle for mass transport},
   journal = 	 PRL,
   year = 	 2018,
   volume = 	 121,
