--- a/bibfile.bib
+++ b/bibfile.bib
@@ -894,7 +894,8 @@ Transition in Titanium},
   year = 	 2018,
   volume = 	 152,
   pages = 	 {308-323},
-  doi = 	 {10.1016/j.commatsci.2018.05.021}
+  doi = 	 {10.1016/j.commatsci.2018.05.021},
+  data = 	 {hdl.handle.net/11256/959}
 }
 
 @Article{TrinkleVariational2018,
@@ -916,7 +917,8 @@ Transition in Titanium},
   year = 	 2018,
   volume = 	 2,
   pages = 	 113605,
-  doi = 	 {10.1103/PhysRevMaterials.2.113605}
+  doi = 	 {10.1103/PhysRevMaterials.2.113605},
+  data = 	 {hdl.handle.net/11256/978}
 }
   eprint =	 {1808.09512},
 
@@ -1038,6 +1040,20 @@ Transition in Titanium},
   year = 	 2018,
   month = {18 April},
   url = 	 {dx.doi.org/10.18126/M2R04K}
+}
+
+@Misc{Fellinger2018Data,
+  author = 	 {Michael R. Fellinger and Louis G. {Hector, Jr.} and Dallas R. Trinkle},
+  title = 	 {Data Citation: Effect of solutes on the lattice parameters and elastic stiffness coefficients of body-centered tetragonal {Fe}},
+  year = 	 2018,
+  url = 	 {hdl.handle.net/11256/959}
+}
+
+@Misc{Fellinger2018bData,
+  author = 	 {Michael R. Fellinger and Anne Marie Z. Tan and Louis G. {Hector, Jr.} and Dallas R. Trinkle},
+  title = 	 {Data Citation: Geometries of edge and mixed dislocations in bcc {Fe} from first principles calculations},
+  year = 	 2018,
+  url = 	 {hdl.handle.net/11256/671}
 }
 
 @Misc{MagnesiumDatabase,
