--- a/bibfile.bib
+++ b/bibfile.bib
@@ -910,7 +910,7 @@ Transition in Titanium},
   eprint =	 {1805.11618},
 
 @Article{Fellinger2018b,
-  author = 	 {Michael R. Fellinger and Anne Marie Z. Tan and Louis G. {Hector Jr.} and Dallas R. Trinkle},
+  author = 	 {Michael R. Fellinger and Anne Marie Z. Tan and Louis G. {Hector, Jr.} and Dallas R. Trinkle},
   title = 	 {Geometries of edge and mixed dislocations in bcc {Fe} from first
  principles calculations},
   journal = 	 PRM,
@@ -922,27 +922,51 @@ Transition in Titanium},
 }
   eprint =	 {1808.09512},
 
+@Article{Jain2019,
+  author = 	 {Abhinav C. P. Jain and Patrick A. Burr and Dallas R. Trinkle},
+  title = 	 {First principles calculations of solute transport in zirconium: Vacancy-mediated diffusion with metastable states and interstitial diffusion},
+  journal = 	 PRM,
+  year = 	 2019,
+  volume = 	 3,
+  pages = 	 033402,
+  doi = 	 {10.1103/PhysRevMaterials.3.033402},
+  data = 	 {dx.doi.org/10.18126/M2R04K}
+}
+
+@Article{Tan2019,
+  author = 	 {Anne Marie Z. Tan and Christopher Woodward and Dallas R. Trinkle},
+  title = 	 {Dislocation core structures in {Ni}-based superalloys computed using density functional theory based flexible boundary condition approach},
+  journal = 	 PRM,
+  year = 	 2019,
+  volume = 	 3,
+  pages = 	 {XXXXXX},
+  doi = 	 {10.1103/PhysRevMaterials.3.XXXXXX},
+}
+
+@InCollection{Agarwal2019,
+  author = 	 {Ravi Agarwal and Dallas R. Trinkle},
+  title = 	 {Uncertainty quantification of solute transport coefficients},
+  booktitle = 	 {Uncertainty Quantification in Multiscale Materials Modeling},
+  publisher = {Elsevier},
+  year = 	 2019,
+  editor = 	 {Yan Wang and David McDowell},
+  series = 	 {Elsevier series in Mechanics of Advanced Materials},
+  chapter = 	 12
+}
+  OPTpages = 	 {},
+  OPTdoi = 	 {}
+
 ==== Submitted papers ====
 
-@Unpublished{Jain2018a,
-  author = 	 {Abhinav C. P. Jain and Patrick A. Burr and Dallas R. Trinkle},
-  title = 	 {First principles calculations of solute transport in {Zirconium I}: Vacancy-mediated diffusion with metastable states},
-  note = 	 {(under review, Phys. Rev. Mater.)},
-  year = 	 2018
-}
-
-@Unpublished{Jain2018b,
-  author = 	 {Abhinav C. P. Jain and Patrick A. Burr and Dallas R. Trinkle},
-  title = 	 {First principles calculations of solute transport in {Zirconium II}: Interstitial diffusion},
-  note = 	 {(under review, Phys. Rev. Mater.)},
-  year = 	 2018
-}
-
-@Unpublished{Tan2018,
-  author = 	 {Anne Marie Z. Tan and Christopher Woodward and Dallas R. Trinkle},
-  title = 	 {Dislocation core structures in {Ni}-based superalloys computed using density functional theory-based flexible boundary condition approach},
-  note = 	 {(under review, Phys. Rev. Mater.)},
-  year = 	 2018
+@Unpublished{Fellinger2019,
+  author = 	 {Michael R. Fellinger and Louis G. {Hector, Jr.} and Dallas R. Trinkle},
+  title = 	 {Impact of solutes on the lattice parameters and elastic stiffness coefficients of hcp {Fe} from first-principles calculations},
+  note = 	 {(under review, Comp. Mater. Sci.)},
+  OPTkey = 	 {},
+  OPTmonth = 	 {},
+  OPTyear = 	 {2019},
+  OPTfile = 	 {},
+  OPTdoi = 	 {}
 }
 
 ==== Software ====
