Updates to recent papers.

--- a/bibfile.bib
+++ b/bibfile.bib
@@ -939,8 +939,8 @@ Transition in Titanium},
   journal = 	 PRM,
   year = 	 2019,
   volume = 	 3,
-  pages = 	 {XXXXXX},
-  doi = 	 {10.1103/PhysRevMaterials.3.XXXXXX},
+  pages = 	 {033609},
+  doi = 	 {10.1103/PhysRevMaterials.3.033609},
 }
 
 @InCollection{Agarwal2019,
