Updates for Mike's papers.

--- a/bibfile.bib
+++ b/bibfile.bib
@@ -956,18 +956,18 @@ Transition in Titanium},
   OPTpages = 	 {},
   OPTdoi = 	 {}
 
-==== Submitted papers ====
-
-@Unpublished{Fellinger2019,
+@Article{Fellinger2019,
   author = 	 {Michael R. Fellinger and Louis G. {Hector, Jr.} and Dallas R. Trinkle},
   title = 	 {Impact of solutes on the lattice parameters and elastic stiffness coefficients of hcp {Fe} from first-principles calculations},
-  note = 	 {(under review, Comp. Mater. Sci.)},
-  OPTkey = 	 {},
-  OPTmonth = 	 {},
-  OPTyear = 	 {2019},
-  OPTfile = 	 {},
-  OPTdoi = 	 {}
+  journal = 	 {Comp. Mater. Sci.},
+  year = 	 2019,
+  volume = 	 164,
+  pages = 	 {116-126},
+  doi = 	 {10.1016/j.commatsci.2019.03.056},
+  data = 	 {hdl.handle.net/11256/982}
 }
+
+==== Submitted papers ====
 
 ==== Software ====
 
@@ -1078,6 +1078,13 @@ Transition in Titanium},
   title = 	 {Data Citation: Geometries of edge and mixed dislocations in bcc {Fe} from first principles calculations},
   year = 	 2018,
   url = 	 {hdl.handle.net/11256/671}
+}
+
+@Misc{Fellinger2019Data,
+  author = 	 {Michael R. Fellinger and Louis G. {Hector, Jr.} and Dallas R. Trinkle},
+  title = 	 {Data Citation: Impact of solutes on the lattice parameters and elastic stiffness coefficients of hcp {Fe} from first-principles calculations},
+  year = 	 2019,
+  data = 	 {hdl.handle.net/11256/982}
 }
 
 @Misc{MagnesiumDatabase,
