--- a/bibfile.bib
+++ b/bibfile.bib
@@ -967,13 +967,21 @@ Transition in Titanium},
   data = 	 {hdl.handle.net/11256/982}
 }
 
-==== Submitted papers ====
+@article{Gao2020,
+author = {Ran Gao and Abhinav C. P. Jain and Shishir Pandya and Yongqi Dong and Yakun Yuan and Hua Zhou and Liv R. Dedon and Vincent Thor{\'e}ton and Sahar Saremi and Ruijuan Xu and Aileen Luo and Ting Chen and Venkatraman Gopalan and Elif Ertekin and John Kilner and Tatsumi Ishihara and Nicola H. Perry and Dallas R. Trinkle and Lane W. Martin},
+title = {Designing Optimal Perovskite Structure for High Ionic Conduction},
+journal = {Adv. Mater.},
+volume = 32,
+number = 1,
+pages = 1905178,
+doi = {10.1002/adma.201905178},
+url = {https://onlinelibrary.wiley.com/doi/abs/10.1002/adma.201905178},
+eprint = {https://onlinelibrary.wiley.com/doi/pdf/10.1002/adma.201905178},
+year = 2020
+}
 
-@Unpublished{Gao2019,
-  author = 	 {Ran Gao and Abhinav Jain and Shishir Pandya and Yongqi Dong and Yakun Yuan and Hua Zhou and Liv R. Dedon and Vincent Thor{\'e}ton and Sahar Saremi and Ruijuan Xu and Aileen Luo and Ting Chen and Venkatraman Gopalan and Elif Ertekin and John Kilner and Tatsumi Ishihara and Nicola H. Perry and Dallas R. Trinkle and Lane W. Martin},
-  title = 	 {Designing Optimal Perovskite Structure for High Ionic Conduction},
-  note = 	 {(submitted, Nat. Mater.)},
-  year = 	 2019}
+
+==== Submitted papers ====
 
 ==== Software ====
 
