--- a/bibfile.bib
+++ b/bibfile.bib
@@ -943,15 +943,15 @@ Transition in Titanium},
   doi = 	 {10.1103/PhysRevMaterials.3.033609},
 }
 
-@InCollection{Agarwal2019,
+@InCollection{Agarwal2020,
   author = 	 {Ravi Agarwal and Dallas R. Trinkle},
   title = 	 {Uncertainty quantification of solute transport coefficients},
   booktitle = 	 {Uncertainty Quantification in Multiscale Materials Modeling},
   publisher = {Elsevier},
-  year = 	 2019,
+  year = 	 2020,
   editor = 	 {Yan Wang and David McDowell},
   series = 	 {Elsevier series in Mechanics of Advanced Materials},
-  chapter = 	 12
+  chapter = 	 4
 }
   OPTpages = 	 {},
   OPTdoi = 	 {}
@@ -975,11 +975,23 @@ volume = 32,
 number = 1,
 pages = 1905178,
 doi = {10.1002/adma.201905178},
-url = {https://onlinelibrary.wiley.com/doi/abs/10.1002/adma.201905178},
-eprint = {https://onlinelibrary.wiley.com/doi/pdf/10.1002/adma.201905178},
 year = 2020
 }
 
+@article{Honrao2020,
+  title = {Split-vacancy defect complexes of oxygen in hcp and fcc cobalt},
+  author = {Shreyas J. Honrao and Quentin Rizzardi and Robert Maa\ss{} and Dallas R. Trinkle and Richard G. Hennig},
+  journal = {Phys. Rev. Materials},
+  volume = 4,
+  issue = 10,
+  pages = 103608,
+  numpages = 9,
+  year = 2020,
+  month = {Oct},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevMaterials.4.103608}
+}
+  url = {https://link.aps.org/doi/10.1103/PhysRevMaterials.4.103608}
 
 ==== Submitted papers ====
 
