Updates to papers.

--- a/bibfile.bib
+++ b/bibfile.bib
@@ -993,7 +993,35 @@ year = 2020
 }
   url = {https://link.aps.org/doi/10.1103/PhysRevMaterials.4.103608}
 
+@article{Qiu2021,
+author = {Di Qiu and Pengyang Zhao and Dallas R. Trinkle and Yunzhi Wang},
+title = {Stress-dependent dislocation core structures leading to non-Schmid behavior},
+journal = {Mater. Res. Lett.},
+volume = 9,
+number = 3,
+pages = {134-140},
+year  = 2021,
+publisher = {Taylor & Francis},
+doi = {10.1080/21663831.2020.1854359},
+}
+
+
 ==== Submitted papers ====
+
+@Unpublished{Smith2021,
+  author = 	 {Lauren T. W. Smith and Anne Marie Z. Tan and Thomas D. Swinburne and Danny Perez and Dallas R. Trinkle},
+  title = 	 {Accelerated molecular dynamics simulations of dislocation climb in nickel},
+  year = 	 2021,
+  note =         {(under review, Phys. Rev. Mater.)}
+}
+
+@Unpublished{Vita2021,
+  author = 	 {Joshua A. Vita and Dallas R. Trinkle},
+  title = 	 {Exploring the necessary complexity of interatomic potentials},
+  year = 	 2021,
+  note =         {(under review, Nature Mater.)}
+}
+
 
 ==== Software ====
 
