--- a/bibfile.bib
+++ b/bibfile.bib
@@ -944,7 +944,7 @@ Transition in Titanium},
 }
 
 @InCollection{Agarwal2020,
-title = {4 - Uncertainty quantification of solute transport coefficients},
+title = {4: Uncertainty quantification of solute transport coefficients},
 editor = {Yan Wang and David L. McDowell},
 booktitle = {Uncertainty Quantification in Multiscale Materials Modeling},
 publisher = {Woodhead Publishing},
@@ -952,12 +952,12 @@ pages = {93-118},
 year = 2020,
 series = {Elsevier Series in Mechanics of Advanced Materials},
 isbn = {978-0-08-102941-1},
-doi = {https://doi.org/10.1016/B978-0-08-102941-1.00004-3},
-url = {https://www.sciencedirect.com/science/article/pii/B9780081029411000043},
+doi = {10.1016/B978-0-08-102941-1.00004-3},
 author = {Ravi Agarwal and Dallas R. Trinkle},
 keywords = {Density functional theory, Diffusion, Mass transport, Uncertainty quantification},
 abstract = {Solute transport controls a wide variety of both material properties and processing, and computational prediction of transport coefficients plays an increasingly important role in materials design. First-principles methods can routinely compute both defect energies and transition states to provide the atomic-scale information for transport, but scaling up to mesoscale solute mobility requires the solution of the master equation. Kinetic Monte Carlo provides one route to computing transport coefficients, but the stochastic solution to the master equation can make uncertainty quantification difficult. The use of Green functions to compute solute mobilities offers an alternate approach; in addition to being accurate and computationally efficient, the deterministic solution permits the use of a Bayesian framework for uncertainty quantification. In this case, uncertainties in first-principles energies and energy barriers can be propagated forward into uncertainties in mobilities.}
 }
+url = {https://www.sciencedirect.com/science/article/pii/B9780081029411000043},
 
 @Article{Fellinger2019,
   author = 	 {Michael R. Fellinger and Louis G. {Hector, Jr.} and Dallas R. Trinkle},
