Edit to chapter in Agarwal2020

--- a/bibfile.bib
+++ b/bibfile.bib
@@ -944,7 +944,8 @@ Transition in Titanium},
 }
 
 @InCollection{Agarwal2020,
-title = {4: Uncertainty quantification of solute transport coefficients},
+title = {Uncertainty quantification of solute transport coefficients},
+chapter = 4,
 editor = {Yan Wang and David L. McDowell},
 booktitle = {Uncertainty Quantification in Multiscale Materials Modeling},
 publisher = {Woodhead Publishing},
