Added Lauren's paper; next to add Josh's paper.

--- a/bibfile.bib
+++ b/bibfile.bib
@@ -1009,23 +1009,35 @@ publisher = {Taylor & Francis},
 doi = {10.1080/21663831.2020.1854359},
 }
 
+@article{Fey2021,
+  author = 	 {Lauren T. W. Fey and Anne Marie Z. Tan and Thomas D. Swinburne and Danny Perez and Dallas R. Trinkle},
+  title = 	 {Accelerated molecular dynamics simulations of dislocation climb in nickel},
+  journal = {Phys. Rev. Materials},
+  volume = 5,
+  issue = 8,
+  pages = 083603,
+  numpages = 8,
+  year = 2021,
+  month = {Aug},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevMaterials.5.083603}
+}
 
 ==== Submitted papers ====
-
-@Unpublished{Smith2021,
-  author = 	 {Lauren T. W. Smith and Anne Marie Z. Tan and Thomas D. Swinburne and Danny Perez and Dallas R. Trinkle},
-  title = 	 {Accelerated molecular dynamics simulations of dislocation climb in nickel},
-  year = 	 2021,
-  note =         {(under review, Phys. Rev. Mater.)}
-}
 
 @Unpublished{Vita2021,
   author = 	 {Joshua A. Vita and Dallas R. Trinkle},
   title = 	 {Exploring the necessary complexity of interatomic potentials},
   year = 	 2021,
-  note =         {(under review, Nature Mater.)}
+  note =         {(under review, Comp. Mater. Sci.)}
 }
 
+@Unpublished{Dan2021,
+  author = 	 {Yang Dan and Dallas R. Trinkle},
+  title = 	 {First-principles core energies of isolated basal and prism screw dislocations in ma
+gnesium},
+  note = 	 {(under review, Mater. Res. Lett.},
+  year = 	 2021}
 
 ==== Software ====
 
