Cleanup and submitted entries.

--- a/bibfile.bib
+++ b/bibfile.bib
@@ -1023,20 +1023,28 @@ doi = {10.1080/21663831.2020.1854359},
   doi = {10.1103/PhysRevMaterials.5.083603}
 }
 
-==== Submitted papers ====
-
-@Unpublished{Vita2021,
+@Article{Vita2021,
   author = 	 {Joshua A. Vita and Dallas R. Trinkle},
   title = 	 {Exploring the necessary complexity of interatomic potentials},
+  journal = 	 {Comp. Mater. Sci.},
   year = 	 2021,
-  note =         {(under review, Comp. Mater. Sci.)}
+  volume = 	 200,
+  pages = 	 110752,
+  doi = 	 {10.1016/j.commatsci.2021.110752}
 }
+
+==== Submitted papers ====
 
 @Unpublished{Dan2021,
   author = 	 {Yang Dan and Dallas R. Trinkle},
-  title = 	 {First-principles core energies of isolated basal and prism screw dislocations in ma
-gnesium},
-  note = 	 {(under review, Mater. Res. Lett.},
+  title = 	 {First-principles core energies of isolated basal and prism screw dislocations in magnesium},
+  note = 	 {under review, Mater. Res. Lett.},
+  year = 	 2021}
+
+@Unpublished{Fellinger2021,
+  author = 	 {Michael R. Fellinger and Louis G. {Hector, Jr.} and Dallas R. Trinkle},
+  title = 	 {Solutes that Reduce Yield Strength Anisotropies in Magnesium from First Principles},
+  note = 	 {under review, Phys. Rev. Mater.},
   year = 	 2021}
 
 ==== Software ====
@@ -1067,28 +1075,28 @@ gnesium},
   author = 	 {Henry H. Wu and Dallas R. Trinkle},
   title = 	 {Data Citation: Solute effect on oxygen diffusion in {$\alpha$}-titanium},
   year = 	 2013,
-  url  = 	 {hdl.handle.net/11115/125}
+  data  = 	 {hdl.handle.net/11115/125}
 }
 
 @Misc{Garnier2014bData,
   author = 	 {Thomas Garnier and Venkateswara R. Manga and Pascal Bellon and Dallas R. Trinkle},
   title = 	 {Data Citation: Diffusion of {Si} impurities in {Ni} under stress: A first-principles study },
   year = 	 2014,
-  url = 	 {hdl.handle.net/11115/239}
+  data = 	 {hdl.handle.net/11115/239}
 }
 
 @Misc{Agarwal2016Data,
   author = 	 {Ravi Agarwal and Dallas R. Trinkle},
   title = 	 {Data Citation: Light element diffusion in {Mg} using first principles calculations: Anisotropy and elastodiffusion},
   year = 	 2016,
-  url = 	 {hdl.handle.net/11256/694}
+  data = 	 {hdl.handle.net/11256/694}
 }
 
 @Misc{Fellinger2016Data,
   author = 	 {Michael R. Fellinger and Louis G. {Hector, Jr.} and Dallas R. Trinkle},
   title = 	 {Data Citation: \textit{Ab initio} calculations of the lattice parameter and elastic stiffness coefficients of bcc {Fe} with solutes},
   year = 	 2016,
-  url = 	 {hdl.handle.net/11256/671}
+  data = 	 {hdl.handle.net/11256/671}
 }
 
 @Article{Fellinger2017Data,
@@ -1107,7 +1115,7 @@ gnesium},
   title = {Data Citation: Fitting database entries for a modified embedded atom method potential for interstitial oxygen in titanium},
   year = {2016},
   month = {25 July},
-  url = {hdl.handle.net/11256/782}
+  data = {hdl.handle.net/11256/782}
 }
 
 @Misc{Kim2017Data,
@@ -1115,7 +1123,7 @@ gnesium},
   title = {Data Citation: Mechanical Properties and Phase Stability of Monoborides using Density Functional Theory Calculations},
   year = {2017},
   month = {4 January},
-  url = {dx.doi.org/10.18126/M24S3J}
+  data = {dx.doi.org/10.18126/M24S3J}
 }
   doi = {10.18126/M24S3J},
   howpublished = {http://dx.doi.org/doi:10.18126/M24S3J}
@@ -1125,7 +1133,7 @@ gnesium},
   title = 	 {Data Citation: Solute transport database in {Mg} using ab initio and exact diffusion theory},
   year = 	 2017,
   month = {23 August},
-  url = 	 {dx.doi.org/10.18126/M20G83}
+  data = 	 {dx.doi.org/10.18126/M20G83}
 }
 
 @Misc{Jain2018Data,
@@ -1133,21 +1141,21 @@ gnesium},
   title = 	 {Data Citation: Vacancy Mediated and Interstitial Solute Transport in {Zr} from Density Functional Theory Calculations},
   year = 	 2018,
   month = {18 April},
-  url = 	 {dx.doi.org/10.18126/M2R04K}
+  data = 	 {dx.doi.org/10.18126/M2R04K}
 }
 
 @Misc{Fellinger2018Data,
   author = 	 {Michael R. Fellinger and Louis G. {Hector, Jr.} and Dallas R. Trinkle},
   title = 	 {Data Citation: Effect of solutes on the lattice parameters and elastic stiffness coefficients of body-centered tetragonal {Fe}},
   year = 	 2018,
-  url = 	 {hdl.handle.net/11256/959}
+  data = 	 {hdl.handle.net/11256/959}
 }
 
 @Misc{Fellinger2018bData,
   author = 	 {Michael R. Fellinger and Anne Marie Z. Tan and Louis G. {Hector, Jr.} and Dallas R. Trinkle},
   title = 	 {Data Citation: Geometries of edge and mixed dislocations in bcc {Fe} from first principles calculations},
   year = 	 2018,
-  url = 	 {hdl.handle.net/11256/671}
+  data = 	 {hdl.handle.net/11256/671}
 }
 
 @Misc{Fellinger2019Data,
@@ -1155,6 +1163,14 @@ gnesium},
   title = 	 {Data Citation: Impact of solutes on the lattice parameters and elastic stiffness coefficients of hcp {Fe} from first-principles calculations},
   year = 	 2019,
   data = 	 {hdl.handle.net/11256/982}
+}
+
+@Misc{Fellinger2021Data,
+  author = 	 {Michael R. Fellinger and Louis G. {Hector, Jr.} and Dallas R. Trinkle},
+  title = 	 {Data Citation: Density Functional Theory Solute-Dislocation Interactions},
+  year = 	 2021,
+  data = 	 {dx.doi.org/10.25584/1811899},
+  doi = 	 {10.25584/1811899}
 }
 
 @Misc{MagnesiumDatabase,
