--- a/bibfile.bib
+++ b/bibfile.bib
@@ -1033,19 +1033,33 @@ doi = {10.1080/21663831.2020.1854359},
   doi = 	 {10.1016/j.commatsci.2021.110752}
 }
 
-==== Submitted papers ====
-
-@Unpublished{Dan2021,
-  author = 	 {Yang Dan and Dallas R. Trinkle},
-  title = 	 {First-principles core energies of isolated basal and prism screw dislocations in magnesium},
-  note = 	 {under review, Mater. Res. Lett.},
-  year = 	 2021}
-
-@Unpublished{Fellinger2021,
+@Article{Fellinger2022, 
   author = 	 {Michael R. Fellinger and Louis G. {Hector, Jr.} and Dallas R. Trinkle},
   title = 	 {Solutes that Reduce Yield Strength Anisotropies in Magnesium from First Principles},
-  note = 	 {under review, Phys. Rev. Mater.},
-  year = 	 2021}
+  journal = 	 {Phys. Rev. Mater.},
+  year = 	 2022,
+  volume = 	 6,
+  pages = 	 013607,
+  doi = 	 {10.1103/PhysRevMaterials.6.013607}
+}
+
+@Article{Dan2022,
+  author = 	 {Yang Dan and Dallas R. Trinkle},
+  title = 	 {First-principles core energies of isolated basal and prism screw dislocations in magnesium},
+  journal = 	 {Mater. Res. Lett.},
+  year = 	 2022,
+  volume = 	 10,
+  pages = 	 {360-368},
+  doi = 	 {10.1080/21663831.2022.2051763}
+}
+
+==== Submitted papers ====
+
+@Unpublished{Chattopadhyay2022,
+  author = 	 {Soham Chattopadhyay and Dallas R. Trinkle},
+  title = 	 {Exact Calculation of Interstitial Dumbbell-Mediated Transport Coefficients in Dilute Crystalline Systems},
+  note = 	 {(submitted to Philos. Mag.)},
+  year = 	 2022}
 
 ==== Software ====
 
