Updates to Philos. Mag. paper.

--- a/bibfile.bib
+++ b/bibfile.bib
@@ -1053,12 +1053,24 @@ doi = {10.1080/21663831.2020.1854359},
   doi = 	 {10.1080/21663831.2022.2051763}
 }
 
+@Article{Chattopadhyay2022,
+  author = {Soham Chattopadhyay and Dallas R. Trinkle},
+  title = {Numerical calculation of interstitial dumbbell-mediated transport coefficients in dilute crystalline systems with non-truncated correlations},
+  journal = PhilMag,
+  volume = 102,
+  number = 24,
+  pages = {2459-2505},
+  year  = 2022,
+  publisher = {Taylor & Francis},
+  doi = {10.1080/14786435.2022.2120646}
+}
+
 ==== Submitted papers ====
 
-@Unpublished{Chattopadhyay2022,
-  author = 	 {Soham Chattopadhyay and Dallas R. Trinkle},
-  title = 	 {Exact Calculation of Interstitial Dumbbell-Mediated Transport Coefficients in Dilute Crystalline Systems},
-  note = 	 {(submitted to Philos. Mag.)},
+@Unpublished{Lu2022,
+  author = 	 {Grace M. Lu and Matthew Witman and Sapan Agarwal and Vitalie Stavila and Dallas R. Trinkle},
+  title = 	 {Explainable Machine Learning for Hydrogen Diffusion in Metals and Random Binary Alloys},
+  note = 	 {(submitted to Phys. Rev. Mater.)},
   year = 	 2022}
 
 ==== Software ====
@@ -7156,3 +7168,15 @@ on a non-homogeneous substrate},
   doi = 	 {10.1103/PhysRevE.95.032121}
 }
 
+@article{Choi2018,
+  doi = {10.1038/s41524-017-0060-9},
+  url = {https://doi.org/10.1038/s41524-017-0060-9},
+  year = {2018},
+  month = jan,
+  publisher = {Springer Science and Business Media {LLC}},
+  volume = {4},
+  number = {1},
+  author = {Won-Mi Choi and Yong Hee Jo and Seok Su Sohn and Sunghak Lee and Byeong-Joo Lee},
+  title = {Understanding the physical metallurgy of the {CoCrFeMnNi} high-entropy alloy: an atomistic simulation study},
+  journal = {npj Computational Materials}
+}
