Added Josh's new paper.

--- a/bibfile.bib
+++ b/bibfile.bib
@@ -1065,13 +1065,32 @@ doi = {10.1080/21663831.2020.1854359},
   doi = {10.1080/14786435.2022.2120646}
 }
 
-==== Submitted papers ====
+@Article{Lu2023,
+  author = 	 {G. M. Lu and M. Witman and S. Agarwal and V. Stavila and D. R. Trinkle},
+  title = 	 {Explainable machine learning for hydrogen diffusion in metals and random binary alloys},
+  journal = 	 PRM,
+  year = 	 2023,
+  volume = 	 7,
+  pages = 	 105402,
+  doi = 	 {10.1103/PhysRevMaterials.7.105402}
+}
+eprint = {2308.07823}
 
-@Unpublished{Lu2022,
-  author = 	 {Grace M. Lu and Matthew Witman and Sapan Agarwal and Vitalie Stavila and Dallas R. Trinkle},
-  title = 	 {Explainable Machine Learning for Hydrogen Diffusion in Metals and Random Binary Alloys},
-  note = 	 {(submitted to Phys. Rev. Mater.)},
-  year = 	 2022}
+
+
+@Article{Vita2024,
+  author = 	 {J. A. Vita and D. R. Trinkle},
+  title = 	 {Spline-based neural network interatomic potentials: Blending classical and machine learning models},
+  journal = 	 CMS,
+  year = 	 2024,
+  volume = 	 232,
+  pages = 	 112655,
+  doi = 	 {10.1016/j.commatsci.2023.112655}
+}
+  eprint = 	 {2310.02904},
+
+
+==== Submitted papers ====
 
 ==== Software ====
 
