Update on journal

--- a/bibfile.bib
+++ b/bibfile.bib
@@ -1081,7 +1081,7 @@ eprint = {2308.07823}
 @Article{Vita2024,
   author = 	 {J. A. Vita and D. R. Trinkle},
   title = 	 {Spline-based neural network interatomic potentials: Blending classical and machine learning models},
-  journal = 	 CMS,
+  journal = 	 {Comp. Mater. Sci.},
   year = 	 2024,
   volume = 	 232,
   pages = 	 112655,
